# sdd-agentic-framework

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  DS-STAR_Enhancement_SOW.md  FRAMEWORK_GUIDE.md  README.md  SETUP.md  START_HERE.md  WINDOWS_SETUP.md  fix-line-endings.sh  init-project.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: README-statusline.md  settings.json  statusline.sh
.claude/agents/architecture/: backend-architect.md  subagent-architect.md
.claude/agents/data/: database-specialist.md
.claude/agents/engineering/: frontend-specialist.md  full-stack-developer.md
.claude/commands/: create-agent.md  create-prd.md  create-skill.md  initialize-project.md  plan.md  specify.md  tasks.md
.docs/: phase-1-completion-summary.md  phase-2-completion-summary.md  phase-3-completion-summary.md  phase-4-completion-summary.md  sanitization-checklist.md  sanitization-sign-off.md  sdd-framework-enhancements-prd.md  sdd-framework-enhancements-sow.md  skills-integration-analysis.md  skills-integration-completion-summary.md  skills-integration-executive-summary.md
.docs/agents/: agent-registry.json
.docs/case-studies/: ioun-ai.md
.docs/policies/: agent-creation-policy.md  agent-file-naming-convention.md  branching-strategy-policy.md  code-review-policy.md  deployment-policy.md  file-structure-policy.md  instruction-files-policy.md  release-management-policy.md  security-policy.md  testing-policy.md  todo-architecture-policy.md
.specify/config/: refinement.conf
.specify/memory/: agent-collaboration-triggers.md  agent-collaboration.md  agent-governance.md  constitution.md  constitution_update_checklist.md
.specify/plans/: docker-mcp-toolkit-integration.md
.specify/scripts/: setup-windows.ps1  setup.sh
.specify/templates/: agent-template.md  prd-template.md  skill-template.md  tasks-template.md
specs/: README.md
specs/001-ds-star-multi/: LIBRARIES_QUICK_REFERENCE.md  PHASE_3.3_COMPLETION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/sdd/: __init__.py
src/sdd_agentic_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/contract/: test_autodebug_contract.py  test_context_contract.py  test_finalizer_contract.py  test_router_contract.py  test_verifier_contract.py
tests/fixtures/: setup_test_environment.py
tests/integration/: test_auto_debug.py  test_context_retrieval.py  test_e2e_workflow.py  test_finalizer_compliance.py  test_refinement_loop.py  test_routing_orchestration.py  test_verification_gate.py
(+220 files in other folders)
